[gd_scene load_steps=3 format=3 uid="uid://fler8kjor8uy"]

[ext_resource type="Script" uid="uid://dktba3jklhm33" path="res://scenes/ui/menus/main_menu.gd" id="1_h1kbi"]
[ext_resource type="Texture2D" uid="uid://4nv0jbhutjnm" path="res://icon.svg" id="2_whicr"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_h1kbi")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftSideContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/LeftSideContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="GameTitleLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "A Longer Game Title"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StartGameButton" type="Button" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer/VBoxContainer2/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer/VBoxContainer2/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer/VBoxContainer2/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/LeftSideContainer/PanelContainer/MarginContainer/VBoxContainer2/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="RightSideContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/RightSideContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/RightSideContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_whicr")
